RESOLVED FIXED249846
[IFC][hanging punctuation] Line::applyRunExpansion should only trim pre-wrap triggered hanging whitespace
https://bugs.webkit.org/show_bug.cgi?id=249846
Summary [IFC][hanging punctuation] Line::applyRunExpansion should only trim pre-wrap ...
alan
Reported 2022-12-23 09:10:15 PST
ssia
Attachments
Patch (6.67 KB, patch)
2022-12-23 09:20 PST, alan
no flags
alan
Comment 1 2022-12-23 09:20:24 PST
EWS
Comment 2 2022-12-23 12:26:14 PST
Committed 258306@main (c604535934c4): <https://commits.webkit.org/258306@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464180 [details].
Radar WebKit Bug Importer
Comment 3 2022-12-23 12:27:19 PST
Note You need to log in before you can comment on or make changes to this bug.